product update with one image and no prexisting image in form

--- a/adminapp/templates/adminside/dashboard.html
+++ b/adminapp/templates/adminside/dashboard.html
@@ -73,25 +73,19 @@
                                     View Products
                                 </a>
                             </li>
-                            <!-- <li>
-                                <a href="{% url 'adminapp:add_subcategory' %}">
-                                    <i class="fa fa-square"></i>
-                                    Add SubCategory
-                                </a>
-                            </li> -->
  
 
                         </ul>
                     </li>
                     <li>
 
-                        <a href="javascript:;" data-show="useractivity">
+                        <a href="javascript:;" data-show="siteSe">
                             <i class="fa fa-user"></i>
                             Categories
                             <i class="downarrow fa-solid fa-chevron-down"></i>
                         </a>
 
-                        <ul class="submenus" id="useractivity">
+                        <ul class="submenus" id="siteSe">
 
                             <li>
                                 <a href="{% url 'adminapp:addcategory' %}">
@@ -106,26 +100,20 @@
                                     View Category
                                 </a>
                             </li>
-                           
-
-                            <li>
-                                <a href="{% url 'adminapp:add_subcategory' %}">
-                                    <i class="fa fa-square"></i>
-                                    Add SubCategory
-                                </a>
-                            </li>
  
                         </ul>
                     </li>
+                    
+                    
                     <li>
 
-                        <a href="javascript:;" data-show="useractivity">
+                        <a href="javascript:;" data-show="founderteam">
                             <i class="fa fa-user"></i>
                             SubCategory
                             <i class="downarrow fa-solid fa-chevron-down"></i>
                         </a>
 
-                        <ul class="submenus" id="useractivity">
+                        <ul class="submenus" id="founderteam">
 
                             <li>
                                 <a href="{% url 'adminapp:add_product' %}">
@@ -140,12 +128,6 @@
                                     View SubCategory
                                 </a>
                             </li>
-                            <!-- <li>
-                                <a href="{% url 'adminapp:add_subcategory' %}">
-                                    <i class="fa fa-square"></i>
-                                    Add SubCategory
-                                </a>
-                            </li> -->
  
 
                         </ul>
