3 image field updation done in product update

--- a/adminapp/templates/adminside/dashboard.html
+++ b/adminapp/templates/adminside/dashboard.html
@@ -116,7 +116,7 @@
                         <ul class="submenus" id="founderteam">
 
                             <li>
-                                <a href="{% url 'adminapp:add_product' %}">
+                                <a href="{% url 'adminapp:add_subcategory' %}">
                                     <i class="fa fa-square"></i>
                                     Add SubCategory
                                 </a>
