--- a/home/templates/userside/sample.html
+++ b/home/templates/userside/sample.html
@@ -2,12 +2,28 @@
 
 {% block corousel%}
 
-<h1>All Products</h1>
-{% for product in products %}
-    <div>
-        <h2>{{ product.pr_name }}</h2>
-        <img src="{{ product.product_image.first.image.url }}" alt="{{ product.pr_name }}" style="height:200px;">
-    <h4>price:{{product.product_varient.first.price}}</h4>
+<!-- userside/detail.html -->
+
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      {% for image in images %}
+      <li data-target="#carouselExampleIndicators" data-slide-to="{{ forloop.counter0 }}" {% if forloop.first %}class="active"{% endif %}></li>
+      {% endfor %}
+    </ol>
+    <div class="carousel-inner">
+      {% for image in images %}
+      <div class="carousel-item {% if forloop.first %}active{% endif %}">
+        <img src="{{ image.image.url }}" class="d-block w-100" alt="Product Image">
+      </div>
+      {% endfor %}
     </div>
-{% endfor %}
-{% endblock %}
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+  {% endblock corousel%}
