--- a/home/templates/userside/detail.html
+++ b/home/templates/userside/detail.html
@@ -38,31 +38,7 @@
                     </div>
                     <small class="pt-1">(50 Reviews)</small>
                 </div>
-                <h3 class="font-weight-semi-bold mb-4">₹</h3>
-                <!-- <p class="mb-4">Volup erat ipsum diam elitr rebum et dolor. Est nonumy elitr erat diam stet sit clita ea. Sanc invidunt ipsum et, labore clita lorem magna lorem ut. Erat lorem duo dolor no sea nonumy. Accus labore stet, est lorem sit diam sea et justo, amet at lorem et eirmod ipsum diam et rebum kasd rebum.</p> -->
-                <!-- <div class="d-flex mb-3">
-                    <p class="text-dark font-weight-medium mb-0 mr-3">Sizes:</p>
-                    <form>
-                        {% for v in varients%}
-                        <div class="custom-control custom-radio custom-control-inline">
-                            <input type="radio" class="custom-control-input"id="size-{{ v.size.id}}"  name="size" value="{{ v.size.id}}">
-                            <label class="custom-control-label" for="size-{{ v.size.id}}">{{v.size}}</label>
-                        </div>
-                        {% endfor %}
-                    </form>
-                </div> -->
-                <!-- <div class="d-flex mb-4">
-                    <p class="text-dark font-weight-medium mb-0 mr-3">Colors:</p>
-                    <form>
-                        {% for color in  colors%}
-                        <div class="custom-control custom-radio custom-control-inline">
-                            <input type="radio" class="custom-control-input"  name="color">
-                            <label class="custom-control-label" ">{{color.color}}</label>
-                        </div>
-                        {% endfor %}
-                    </form>
-                       
-                </div> -->
+                <!--
 
                 <div class="d-flex mb-3">
                     <p class="text-dark font-weight-medium mb-0 mr-3">Colors:</p>
@@ -77,15 +53,15 @@
 
                     </div>
                     <div class="d-flex mb-4">
-                        <p class="text-dark font-weight-medium mb-0 mr-3">Sizes:</p>
+                        <p class="text-dark font-weight-medium mb-0 mr-3 choose-size">Sizes:</p>
                         <form> {% for s in  sizes%}
                             <div class="custom-control custom-radio custom-control-inline">
-                                <input type="radio" class="custom-control-input choose-size" id="{{s.size__id}}" value="{{s.size__size}}" name="size">
-                                <label class="custom-control-label" for="{{s.size__id}}">{{s.size__size}}</label>
+                                <input type="radio" class="custom-control-input " id="size_{{ s.id }}"value="{{ s.id }}" name="size">
+                                <label class="custom-control-label" for="size_{{ s.id }}">{{s.size}}</label>
                             </div>
                             {% endfor %}
                         </form>
-                        </div> 
+                        </div>  -->
 
 
                 <!-- <div class="d-flex mb-4">
@@ -98,7 +74,35 @@
                         {% endfor %}
                     </form>
                     </div> -->
+                    <h3 class="font-weight-semi-bold mb-4">{{ product.pr_name }}</h3>
 
+                    <div >
+                        <div class="d-flex mb-3">
+                        <p class="text-dark font-weight-medium mb-0 mr-3">Color</p>
+                        <form id="sizeForm">
+                            {% for color in colors %}
+                                <div class="custom-control custom-radio custom-control-inline">
+                                    <input type="radio" class="custom-control-input" id="color-{{color.id}}" name="color" value="{{ color.id }}">
+                                    <label class="custom-control-label" for="color-{{color.id}}">{{ color.color}}</label>
+                                </div>
+                            {% endfor %}
+                        </div> 
+                        <div class="d-flex mb-4">
+                        <p class="text-dark font-weight-medium mb-0 mr-3">Size:</p>
+                       
+                            {% for size in sizes %}
+                                <div class="custom-control custom-radio custom-control-inline">
+                                    <input type="radio" class="custom-control-input" id="size-{{ size.id }}" name="size" value="{{ size.id }}">
+                                    <label class="custom-control-label" for="size-{{ size.id }}">{{size.size }}</label>
+                                </div>
+                            {% endfor %}  </div>
+                        </form>
+                    </div>
+                    
+                    <h3 class="font-weight-semi-bold mb-4" id="priceDisplay">
+                        <!-- Price will be displayed here -->
+                    </h3>
+                    
                 <div class="d-flex align-items-center mb-4 pt-2">
                     <div class="input-group quantity mr-3" style="width: 130px;">
                         <div class="input-group-btn">
@@ -332,35 +336,35 @@
         </div>
     </div>
     <!-- Products End -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-    <!-- <script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
     $(document).ready(function() {
-        $('input[name=size], input[name=color]').change(function() {
-            var size_id = $('input[name=size]:checked').val();
-            var color_id = $('input[name=color]:checked').val();
-    
-            $.ajax({
-                type: 'GET',
-                url: '{% url "get_price" %}
-                data: {
-                    'size_id': size_id,
-                    'color_id': color_id
-                },
-                success: function(response) {
-                    if (response.price) {
-                        $('.product-price').text('₹ ' + response.price);
+        $('input[type="radio"]').change(function() {
+            var colorId = $('input[name="color"]:checked').val();
+            var sizeId = $('input[name="size"]:checked').val();
+
+            if (colorId && sizeId) {
+                $.ajax({
+                    url: "{% url 'get_price' %}", // replace this with your URL to fetch price
+                    method: "GET",
+                    data: {
+                        'color_id': colorId,
+                        'size_id': sizeId
+                    },
+                    success: function(response) {
+                        if (response.price){
+                        $('#priceDisplay').text("₹" + response.price);
                     } else {
-                        $('.product-price').text('Price not available');
+                        $('#priceDisplay').text("Product Unavailable");
+                    } },
+                    error: function(xhr, errmsg, err) {
+                        console.log(xhr.status + ": " + xhr.responseText);
                     }
-                },
-                error: function(xhr, status, error) {
-                    console.error(xhr.responseText);
-                }
-            });
+                });
+            }
         });
     });
-    </script> -->
-    
+</script>
+
 
     {% endblock content%}
