--- a/home/templates/userside/detail.html
+++ b/home/templates/userside/detail.html
@@ -74,12 +74,13 @@
                         {% endfor %}
                     </form>
                     </div> -->
+                    <form id="sizeForm">
                     <h3 class="font-weight-semi-bold mb-4">{{ product.pr_name }}</h3>
 
                     <div >
                         <div class="d-flex mb-3">
                         <p class="text-dark font-weight-medium mb-0 mr-3">Color</p>
-                        <form id="sizeForm">
+                        
                             {% for color in colors %}
                                 <div class="custom-control custom-radio custom-control-inline">
                                     <input type="radio" class="custom-control-input" id="color-{{color.id}}" name="color" value="{{ color.id }}">
@@ -87,38 +88,41 @@
                                 </div>
                             {% endfor %}
                         </div> 
-                        <div class="d-flex mb-4">
-                        <p class="text-dark font-weight-medium mb-0 mr-3">Size:</p>
+                        <div class="d-flex mb-4" id="sizeOptions" >
+                          <p class="text-dark font-weight-medium mb-0 mr-3">Size:</p>
                        
                             {% for size in sizes %}
-                                <div class="custom-control custom-radio custom-control-inline">
+                                <div class="custom-control custom-radio custom-control-inline size-option" >
                                     <input type="radio" class="custom-control-input" id="size-{{ size.id }}" name="size" value="{{ size.id }}">
                                     <label class="custom-control-label" for="size-{{ size.id }}">{{size.size }}</label>
                                 </div>
-                            {% endfor %}  </div>
+                            {% endfor %}  
+                        </div>
+                            <!-- Price will be displayed here -->
+                            <h3 class="font-weight-semi-bold mb-4" id="priceDisplay">
+                                
+                            </h3>      
+                    </div>
+
                         </form>
-                    </div>
-                    
-                    <h3 class="font-weight-semi-bold mb-4" id="priceDisplay">
-                        <!-- Price will be displayed here -->
-                    </h3>
-                    
-                <div class="d-flex align-items-center mb-4 pt-2">
-                    <div class="input-group quantity mr-3" style="width: 130px;">
-                        <div class="input-group-btn">
-                            <button class="btn btn-primary btn-minus" >
-                            <i class="fa fa-minus"></i>
-                            </button>
+                   
+                        <div class="d-flex align-items-center mb-4 pt-2">
+                            <div class="input-group quantity mr-3" style="width: 130px;">
+                                <div class="input-group-btn">
+                                    <button class="btn btn-primary btn-minus" >
+                                    <i class="fa fa-minus"></i>
+                                    </button>
+                                </div>
+                                <input type="text" class="form-control bg-secondary text-center" id="quantityInput"  value="1">
+                                <div class="input-group-btn">
+                                    <button class="btn btn-primary btn-plus">
+                                        <i class="fa fa-plus"></i>
+                                    </button>
+                                </div>
+                            </div>
+                            <button class="btn btn-primary px-3" id="addToCartBtn"><i class="fa fa-shopping-cart mr-1"></i> Add To Cart</button>
                         </div>
-                        <input type="text" class="form-control bg-secondary text-center" value="1">
-                        <div class="input-group-btn">
-                            <button class="btn btn-primary btn-plus">
-                                <i class="fa fa-plus"></i>
-                            </button>
-                        </div>
-                    </div>
-                    <button class="btn btn-primary px-3"><i class="fa fa-shopping-cart mr-1"></i> Add To Cart</button>
-                </div>
+              
                 <div class="d-flex pt-2">
                     <p class="text-dark font-weight-medium mb-0 mr-2">Share on:</p>
                     <div class="d-inline-flex">
@@ -359,6 +363,41 @@
                     } },
                     error: function(xhr, errmsg, err) {
                         console.log(xhr.status + ": " + xhr.responseText);
+                    }
+                });
+            }
+        });
+
+ // Script for adding product to cart
+        $('#addToCartBtn').click(function() {
+            var colorId = $('input[name="color"]:checked').val();
+            var sizeId = $('input[name="size"]:checked').val();
+            var quantity = $('#quantityInput').val();
+
+            if (colorId && sizeId && quantity) {
+                $.ajax({
+                    url: "{% url 'add_to_cart' %}",
+                    method: "GET",
+                    data: {
+                        'color_id': colorId,
+                        'size_id': sizeId,
+                        'quantity': quantity
+                    },
+                    success: function(response) {
+                        // Handle success response
+                        console.log(response);
+                        var currentBadgeValue = parseInt($('.fa-shopping-cart').next('.badge').text());
+                        var newBadgeValue = currentBadgeValue + parseInt(quantity);
+                        $('.fa-shopping-cart').next('.badge').text(newBadgeValue);
+
+
+
+                    },
+                    error: function(xhr, errmsg, err) {
+                        console.log(xhr.status + ": " + xhr.responseText);
+                        if (xhr.status === 400 && xhr.responseJSON.message === "Product Unavailable") {
+                            alert("Product is unavailable.");}
+                    
                     }
                 });
             }
