--- a/home/templates/userside/sample.html
+++ b/home/templates/userside/sample.html
@@ -2,28 +2,14 @@
 
 {% block corousel%}
 
-<!-- userside/detail.html -->
+{% for cart_item in cart_items %}
 
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      {% for image in images %}
-      <li data-target="#carouselExampleIndicators" data-slide-to="{{ forloop.counter0 }}" {% if forloop.first %}class="active"{% endif %}></li>
-      {% endfor %}
-    </ol>
-    <div class="carousel-inner">
-      {% for image in images %}
-      <div class="carousel-item {% if forloop.first %}active{% endif %}">
-        <img src="{{ image.image.url }}" class="d-block w-100" alt="Product Image">
-      </div>
-      {% endfor %}
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
+    {% with product_variant=cart_item.product_variant %}
+        {% with product=product_variant.prod_id %}
+            {% with product_img=product.product_image.first %}
+  <img src="{{product_img.image.url}}" alt="" style="height: 50px;">
+            {% endwith %}
+        {% endwith %}
+    {% endwith %}
+    {% endfor %}
   {% endblock corousel%}
