--- a/home/templates/userside/detail.html
+++ b/home/templates/userside/detail.html
@@ -343,6 +343,7 @@
     </div>
     <!-- Products End -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+   
 <script>
     $(document).ready(function() {
         $('input[type="radio"]').change(function() {
@@ -370,36 +371,37 @@
             }
         });
 
- // Script for adding product to cart
+ //Script for adding product to cart
  $('#addToCartBtn').click(function() {
     var colorId = $('input[name="color"]:checked').val();
-    var sizeId = $('input[name="size"]:checked').val();
+   var sizeId = $('input[name="size"]:checked').val();
     var quantity = $('#quantityInput').val();
 
     if (colorId && sizeId && quantity) {
-        $.ajax({
-            url: "{% url 'add_to_cart' %}",
-            method: "GET",
-            data: {
+       $.ajax({
+           url: "{% url 'add_to_cart' %}",
+           method: "GET",
+          data: {
                 'color_id': colorId,
                 'size_id': sizeId,
                 'quantity': quantity
             },
             success: function(response) {
                 console.log(response);
-                var currentBadgeValue = parseInt($('.fa-shopping-cart').next('.badge').text());
-                var newBadgeValue = currentBadgeValue + parseInt(quantity);
-                $('.fa-shopping-cart').next('.badge').text(newBadgeValue);
+                var currentBadgeValue = parseInt($('.fa-shopping-cart').next('.badge').text())|| 0;
+               var newBadgeValue = currentBadgeValue + parseInt(quantity);
+               $('.fa-shopping-cart').next('.badge').text(newBadgeValue);
             },
-            error: function(xhr, errmsg, err) {
-                console.log(xhr.status + ": " + xhr.responseText);
-                if (xhr.status === 400 && xhr.responseJSON.error === "Product unavailable") {
-                    alert("Product is unavailable.");
-                }
-            }
-        });
-    }
-});});
+           error: function(xhr, errmsg, err) {
+               console.log(xhr.status + ": " + xhr.responseText);
+              if (xhr.status === 400 && xhr.responseJSON.error === "Product unavailable") {
+                  alert("Product is unavailable.");
+              }
+          }
+      });
+  }
+});
+});
 </script>
 
 
